feat: Implement Waitlist controller which includes: - Joining a waitlist - Cancelling a party - Checking in (partially implemented)
